--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"@nextui-org/switch": "^2.0.28",
 		"@nextui-org/system": "2.1.0",
 		"@nextui-org/theme": "2.2.0",
+		"@rainbow-me/rainbowkit": "^2.0.6",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
+		"@tanstack/react-query": "^5.32.1",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
@@ -37,6 +39,8 @@
 		"react-dom": "18.2.0",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.0.4"
+		"typescript": "5.0.4",
+		"viem": "^2.9.31",
+		"wagmi": "^2.8.0"
 	}
 }
