--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
 		"@nextui-org/switch": "^2.0.28",
 		"@nextui-org/system": "2.1.0",
 		"@nextui-org/theme": "2.2.0",
+		"@openzeppelin/contracts": "^5.0.2",
 		"@rainbow-me/rainbowkit": "^2.0.6",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
 		"@tanstack/react-query": "^5.32.1",
+		"@truffle/hdwallet-provider": "^2.1.15",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.19",
 		"clsx": "^2.0.0",
+		"dotenv": "^16.4.5",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
@@ -42,6 +45,7 @@
 		"react-dom": "18.2.0",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
+		"truffle": "^5.11.5",
 		"typescript": "5.0.4",
 		"viem": "^2.9.31",
 		"wagmi": "^2.8.0"
