--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"dotenv": "^16.4.5",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
+		"ethers": "^6.12.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.1",
