--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"dotenv": "^16.4.5",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
-		"ethers": "^6.12.1",
+		"ethers": "^5.7.2",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.1",
@@ -44,11 +44,15 @@
 		"postcss": "8.4.38",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.4.1",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"truffle": "^5.11.5",
 		"typescript": "5.0.4",
 		"viem": "^2.9.31",
 		"wagmi": "^2.8.0"
+	},
+	"devDependencies": {
+		"@types/node-fetch": "^2.6.11"
 	}
 }
